src/containers/home/section/section.css
.section-container-wrapper {
  /* margin-left: 160px; */
  width: fit-content;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  float: left;
  clear: left;
}

.section-container {
  margin: 20px auto;
  height: fit-content;
  width: fit-content;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
}

.section-items {
  margin: 0 5px;
  height: 100%;
  position: relative;
  border-radius: 4px;
}

.section-items-container {
  height: 100%;
}

.add-to-library {
  display: none;
  width: 80%;
  position: absolute;
  font-family: sans-serif;
  font-size: 12px;
  text-align: center;
  color: white;
  /* padding: 8px; */
  bottom: 10px;
  left: 10%;
  z-index: 5;
  border-radius: 4px;
}
.section-items:hover > .add-to-library {
  display: block;
  background: rgb(24, 173, 144);
  cursor: pointer;
}
.section-items:hover > .section-items-img {
  filter: brightness(80%);
  cursor: pointer;
}

.lib-stat-drop {
  font-family: sans-serif;
  width: 100%;
  height: 100%;
  font-size: 12px;
  text-align: center;
  color: white;
  padding: 8px;
}
.lib-stat-drop-content p {
  height: 30px;
  padding: 5px 20px;
  font-family: sans-serif;
  font-size: 14px;
  text-align: left;
}

.section-items-img {
  height: 220px;
  width: 160px;
  overflow: hidden;
  border-radius: 4px;
}

.search-bar-wrapper {
  padding: 10px 10px;
  border: 1px solid rgb(229, 229, 229);
  background: white;
  border-radius: 4px;
  display: flex;
  align-items: center;
}
.search-bar-wrapper img {
  height: 29px;
  width: 29px;
}

.section-main-search-bar {
  display: inline-block;
  width: 80%;
}

.section-main-search-bar input {
  outline: none;
  border: none;
  display: inline-block;
  font-family: sans-serif;
  font-weight: lighter;
  width: 100%;
  height: 50%;
  font-size: 18px;
}

.section-advanced-search {
  margin-top: 10px;
}

.section-view-more {
  margin-top: 10px;
  position: absolute;
  right: 10px;
  bottom: 20px;
}
.section-view-more a,
.section-advanced-search a {
  font-size: 12px;
  font-family: sans-serif;
  font-weight: lighter;
  color: #f75239;
}

